--- a/css/style.css
+++ b/css/style.css
@@ -3810,3 +3810,145 @@ body{
 /* Blog Details Box section css end  */
 
 /* Blog Details page css end  */
+/* Contact page css start  */
+/* Contact Banner Section css start  */
+#contact_banner{
+    background: url(../img/contact_bg.png);
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+    position: relative;
+    z-index: 1;
+}
+#contact_banner::before{
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+}
+
+#contact_banner .contact_banner_content h2{
+    font-size: 48px;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+#contact_banner .contact_banner_content p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #ffffff;
+    word-spacing: 2px;
+}
+#contact_banner .contact_banner_content p span a{
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 400;
+    transition: 0.3s;
+}
+#contact_banner .contact_banner_content p span a:hover{
+    color: #FF6F61;
+}
+/* Contact Banner Section css end  */
+/* Contact Info Section css start  */
+#contact_info{
+    margin-top: 98px;
+}
+#contact_info .contact_info_item{
+    padding: 50px 53px;
+}
+#contact_info .contact_info_item .font i{
+    color: #FF6F61;
+    font-size: 30px;
+    margin-right: 20px;
+}
+#contact_info .contact_info_item .contact_info_item_content h4{
+    font-size: 24px;
+    font-weight: 700;
+    color: #11161E;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+#contact_info .contact_info_item .contact_info_item_content p{
+    font-size: 14px;
+    color: #444444;
+    font-weight: 400;
+    margin-bottom: 20px;
+    line-height: 28px;
+}
+#contact_info .contact_info_item .contact_info_item_content h5{
+    font-size: 18px;
+    font-weight: 600;
+    color: #151A32;
+    margin-bottom: 10px;
+}
+#contact_info .contact_info_item .contact_info_item_content a{
+    display: inline-block;
+    color: #444444;
+    margin-bottom: 20px;
+    text-transform: 0.3s;
+}
+#contact_info .contact_info_item .contact_info_item_content a:hover{
+    color: #FF6F61;
+}
+#contact_info .contact_info_item .contact_info_item_content .media a i{
+    margin-right: 9px;
+}
+/* Contact Info Section css end  */
+/* Contact From Section css start  */
+#contact_form{
+    margin-top: 98px;
+}
+
+#contact_form .contact_form_item{
+    padding: 30px 29px;
+}
+#contact_form .contact_form_item h3{
+    font-size: 36px;
+    font-weight: 700;
+    color: #11161E;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+#contact_form .contact_form_item .input{
+    width: 600px;
+}
+#contact_form .contact_form_item .input input{
+    width: 246px;
+    margin-right: 20px;
+    height: 56px;
+    outline: none;
+    background: #F1F3F4;
+    padding-left: 20px;
+    border: none;
+    margin-bottom: 20px;
+}
+#contact_form .contact_form_item textarea{
+    height: 247px;
+    background: #F1F3F4;
+    padding-top: 20px;
+    padding-left: 20px;
+    outline: none;
+    border: none;
+    font-family: var(--body-family);
+    margin-bottom: 18px;
+}
+#contact_form .contact_form_img{
+    background: url(../img/contact_man.png);
+    background-position: center;
+    background-size: cover;
+    height: 614px;
+}
+#contact_form .contact_form_item button{
+    border: none;
+    outline: none;
+    padding: 20px 29px;
+    background: #11161E;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+    margin-left: 180px;
+}
+/* Contact From Section css end  */
+/* Contact page css end  */
